Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-12483

[windows] online upgrade from 2.0.0 to 3.0.1 and reboot cluster: one vbucket fails to warmup

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 3.0.2
    • 3.0.1
    • couchbase-bucket
    • Security Level: Public
    • windows 2008 R2-64-bit
    • Untriaged
    • Windows 64-bit
    • Yes
    • Mar 9 - Mar 27

    Description

      Install couchbase server 2.0.0 on 2 nodes (248 and 249)
      Create a cluster of 2 ndoes and create default bucket
      Load 1000 keys to default bucket

      Install couchbase server 3.0.1-1444 on 2 other nodes (250 and 251)
      Add 2 3.0.1 nodes to 2.0.0 cluser and rebalance. Passed
      Remove 2 2.0.0 nodes (248 and 249) out of cluster and rebalance. Passed
      DCP upgrade rebalance. Passed
      Restart couchbase server on all nodes of 3.0.1 cluster (250 and 251)
      After warmup, 2 replica keys are lost.

      Live cluster available for debug at

      ip:172.23.105.248
      ip:172.23.105.249

      ip:172.23.105.250
      ip:172.23.105.251

      Due to jira failed to attach the file, I will put them in cbfs and add the link later for cbcollectinfo

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thuan Thuan Nguyen
            thuan Thuan Nguyen
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty